--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,6 @@
         android:layout_marginStart="8dp"
         android:gravity="center"
         android:text="@string/welcome_message"
-        android:textColor="#000000"
         android:textSize="45sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,7 +35,6 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/login_message"
-        android:textColor="#000000"
         android:textSize="14sp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -138,5 +136,20 @@
         app:layout_constraintGuide_percent="0.5"
         tools:layout_editor_absoluteX="247dp"
         tools:layout_editor_absoluteY="0dp" />
+
+    <ProgressBar
+        android:id="@+id/loadingProgress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminateTint="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />
 
 </android.support.constraint.ConstraintLayout>
